cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

synopsis:   Advent of Code 2022
author:     Gabriel Fontes
maintainer: hi@m7.rs
license:    Unlicense

executable day1
    main-is:          Main.hs
    hs-source-dirs:   day1
    default-language: Haskell2010
    build-depends:
        base >= 4.14,
        split >= 0.2
