cabal-version:      2.4
name:               aoc2022
version:            0.1.0

synopsis:   Advent of Code 2022
author:     Gabriel Fontes
maintainer: hi@m7.rs
license:    Unlicense

executable day1
    main-is:          Main.hs
    hs-source-dirs:   src/day1
    default-language: Haskell2010
    build-depends:
        base >= 4.14,
        split >= 0.2

executable day2
    main-is:          Main.hs
    hs-source-dirs:   src/day2
    default-language: Haskell2010
    other-modules:    Shape, Outcome
    build-depends:
        base >= 4.14

executable day3
    main-is:          Main.hs
    hs-source-dirs:   src/day3
    default-language: Haskell2010
    build-depends:
        base >= 4.14,
        split >= 0.2

executable day4
    main-is:          Main.hs
    hs-source-dirs:   src/day4
    default-language: Haskell2010
    build-depends:
        base >= 4.14,
        split >= 0.2
